# Amaya-Intelligence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
amaya/: __init__.py  cli.py  methodology.py  provenance.py  schemas.py  scoring.py
amaya/agents/: __init__.py  chain.py  completion.py  dimension.py  orchestrator.py  prompts.py
amaya/api/: __init__.py  app.py  deps.py  jobs.py  ratings.py  runner.py  schemas.py  seed.py
amaya/ingest/: __init__.py  classifier.py  extract.py  pipeline.py  sections.py  types.py
amaya/reports/: __init__.py  pdf.py
dashboard/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/new/: page.tsx
dashboard/app/ratings/[id]/: page.tsx
dashboard/components/: AgentGrid.tsx  ChainChart.tsx  CircuitBreakerAlert.tsx  DimensionDetail.tsx  GradeBadge.tsx  HeaderNav.tsx  ProgressBar.tsx  StatusPill.tsx
dashboard/lib/: api.ts  format.ts  types.ts  useRatingStream.ts
examples/: colabor_input.json
examples/sample_dataroom/: 01-pitch-deck.txt  02-financials.txt  03-product-tech.txt  04-customers.txt  05-competitive.txt  06-leadership.txt  07-operations.txt  08-legal.txt  09-market.txt  10-ai-strategy.txt  11-governance.txt
methodology/: v1.0.yaml
tests/: conftest.py  test_agents_chain.py  test_agents_completion.py  test_agents_dimension.py  test_agents_orchestrator.py  test_agents_prompts.py  test_api_demo.py  test_api_events.py  test_api_jobs.py  test_api_meta.py  test_api_ratings.py  test_api_runner.py  test_ingest_classifier.py  test_ingest_extract.py  test_ingest_pipeline.py  test_methodology.py  test_provenance.py  test_reports_pdf.py  test_scoring.py
