[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amaya"
version = "0.4.0"
description = "ADI — AI Durability Index rating pipeline (scoring + ingest + agents + API + PDF reports)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "YVL Capital Partners"}]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
amaya = "amaya.cli:main"

[tool.setuptools.packages.find]
include = ["amaya*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
